Change dashboard layout so Events is an entire column

--- a/src/components/pages/dashboard/dashboard.scss
+++ b/src/components/pages/dashboard/dashboard.scss
@@ -10,6 +10,10 @@
   flex-flow: column nowrap;
   align-items: stretch;
 
+  .innerGrid {
+    width: 100%;
+  }
+
   .grid-container {
     padding: 10px;
 
