--- a/src/components/shell/deviceListDropdown/deviceListDropdown.scss
+++ b/src/components/shell/deviceListDropdown/deviceListDropdown.scss
@@ -3,26 +3,10 @@
 @import 'src/styles/themes';
 @import 'src/styles/mixins';
 
-/*
+
 .device-list-dropdown {
+
   @include rem-fallback(width, 200px);
 
-  .device-list-dropdown-select {
-    height: 100%;
-
-    @include themify($themes) {
-      // match the background color of the underlying panel:
-      background-color: themed('color-bg-content');
-
-      &:not(:active),
-      &:not(:hover),
-      &:not(:focus) {
-        border-top-color: transparent;
-        border-bottom-color: transparent;
-      }
-    }
-  }
-
-  .device-list-dropdown-chevron {
-    top: 4 * $grid-size;
-  }*/
+  margin-right: 1em;
+}
